# stock-price-prediction

./: .gitignore  README.md
Experiments/: Stock Prediction Experiments.ipynb  Stock_Prediction_BM.ipynb
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/src/api/: routes.py  server.py
backend/src/api/core/: dtos.py
backend/src/factory/: predict.py  train.py  utils.py
backend/src/model/: AAPL.joblib  GOOG.joblib  META.joblib  MSFT.joblib  VALE.joblib  model_and_scaler.joblib
backend/src/usecase/predict_usecase/: __init__.py  dtos.py
backend/src/usecase/train_usecase/: __init__.py  dtos.py
frontend-ios/StockPricePrediction/: ContentView.swift  StockPricePredictionApp.swift
frontend-ios/StockPricePrediction.xcodeproj/: project.pbxproj
frontend-ios/StockPricePrediction/Assets.xcassets/aapl.imageset/: Contents.json
frontend-ios/StockPricePrediction/Assets.xcassets/vale.imageset/: Contents.json
frontend-ios/StockPricePrediction/Models/: APIError.swift  Company.swift  PredictRequest.swift  PredictResponse.swift  PricePrediction.swift  ScreenState.swift
frontend-ios/StockPricePrediction/Screens/Detail/: DetailView.swift  DetailViewModel.swift  PricePredictionChartView.swift  PricePredictionClient.swift
frontend-ios/StockPricePrediction/Screens/Home/: CompanyListItem.swift  HomeView.swift
frontend-ios/StockPricePredictionTests/: StockPricePredictionTests.swift
frontend-ios/StockPricePredictionUITests/: StockPricePredictionUITests.swift  StockPricePredictionUITestsLaunchTests.swift
(+2 files in other folders)
