[tool.poetry]
name = "stock-price-prediction"
version = "0.1.0"
description = ""
authors = ["adriano.warling"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pydantic = "^2.10.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
yfinance = "^0.2.50"
torch = "^2.5.1"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
plotly = "^5.24.1"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
